Changes in 1.1.2 (13 Feb 2013)
- I18N, 国際化対応.
- CREATE TABLE if NOT EXISTS table_name を使用するようにした。

Changes in 1.1.1 (10 Feb 2013)
- use named placement to make sql.
- make _SQL, _make_parameters().
- delete _make_sql().

Changes in 1.1.0 (7 Feb 2013)
- publish JustMe.pid, JustMe.lock_db_path.
- publish JustMe.DIR_NAME, JustMe.BASE_NAME.
- publish JustMe.exercise() to reduce record in lock db.
- when JustMe is already running, you can know pid which probably do lock().
- rename JustMe.LOCK_FILE_PATH to JustMe.LOCK_DB_PATH.
- default JustMe.LOCK_DB_PATH basename is "just_me_lock.db".
- JustMe.__init__() rename db_path to lock_db_path.
- fixed typo, JustMe class doc string.
- modified comment charactor in CREATE_TABLE sql.
- JustMe.dump_db(self, limit=0, where='') accepts where and limit clause.
- JustMe.dump_db() return dumped rows don't print dumped rows.
- make JustMe._insert_to_lock(self, type_) for
    auto commit and transaction IMMEDIATE.
- make JustMe.__enter__(self), JustMe.__exit__(self).

First Release in 1.0.0 (5 Feb 2013)