@@ -1,3 +1,5 @@
 include ChangeLog
 include LICENSE.ja.txt LICENSE.txt
 include MANIFEST.in
+include justme/locale/ja/LC_MESSAGES/just_me.mo
+include justme/locale/just_me.pot
